reformulacao visual e correcao de erros

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
     </main>
 
     <nav class="bottom-nav">
-      <a href="#" class="nav-item" id="nav-inicio"><span>⛪</span>Início</a>
       <a href="#" class="nav-item" data-target="#liturgia"
         ><span>📜</span>Liturgia</a
       >
       <a href="#" class="nav-item" data-target="#horas"><span>🙏</span>Horas</a>
+      <a href="#" class="nav-item" data-target="#avisos" id="nav-avisos"><span>📢</span>Avisos</a>
       <a href="#" class="nav-item" id="nav-sobre-site"><span>❓</span>Sobre</a>
     </nav>
 
