implementacao do terco e ajuste no botao do santo do dia

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
         </button>
       </section>
 
+      <section class="card" id="terco">
+    <h2>📿 Mistério do Dia</h2>
+    <div id="conteudo-terco" style="text-align: center; padding: 10px;">
+      <h3 id="titulo-misterio" style="color: var(--primary); margin-bottom: 5px;">Carregando...</h3>
+      <p id="descricao-misterio" style="font-size: 0.9rem; font-style: italic; color: var(--muted);"></p>
+    </div>
+  </section>
+
       <section class="card" id="horas">
         <h2>🙏 Liturgia das Horas</h2>
         <div class="botoes-horas">
@@ -98,14 +106,13 @@
       </section>
     </main>
 
-    <nav class="bottom-nav">
-      <a href="#" class="nav-item" data-target="#liturgia"
-        ><span>📜</span>Liturgia</a
-      >
-      <a href="#" class="nav-item" data-target="#horas"><span>🙏</span>Horas</a>
-      <a href="#" class="nav-item" data-target="#avisos" id="nav-avisos"><span>📢</span>Avisos</a>
-      <a href="#" class="nav-item" id="nav-sobre-site"><span>❓</span>Sobre</a>
-    </nav>
+   <nav class="bottom-nav">
+  <a href="#" class="nav-item" data-target="#liturgia"><span>📜</span>Liturgia</a>
+  <a href="#" class="nav-item" data-target="#terco"><span>📿</span>Terço</a>
+  <a href="#" class="nav-item" data-target="#horas"><span>🙏</span>Horas</a>
+  <a href="#" class="nav-item" data-target="#avisos" id="nav-avisos"><span>📢</span>Avisos</a>
+  <a href="#" class="nav-item" id="nav-sobre-site"><span>❓</span>Sobre</a>
+</nav>
 
     <div id="modalGeral" class="modal">
       <div class="modal-content">
