--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
     <link rel="manifest" href="site.webmanifest" />
     <title>Liturgia | Ágape de Jovens</title>
     <link rel="stylesheet" href="css/style.css" />
+
+    <meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Liturgia Ágape">
+<link rel="manifest" href="site.webmanifest" />
   </head>
   <body>
     <header class="topo" id="home">
