--- a/index.html
+++ b/index.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+ <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=1">
+    
+    <link rel="manifest" href="./site.webmanifest?v=1">
 
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-
-<link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">
-
-    <link rel="manifest" href="site.webmanifest" />
     <title>Liturgia | Ágape de Jovens</title>
     <link rel="stylesheet" href="css/style.css" />
 
     <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Liturgia Ágape">
-<link rel="manifest" href="site.webmanifest" />
-  </head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Liturgia Ágape">
+</head>
   <body>
   <div id="splash-screen" style="
     position: fixed !important;
