ajustes em avisos e no primeiro card

--- a/index.html
+++ b/index.html
@@ -60,18 +60,16 @@
       <section class="card section-tempo" id="santo">
         <div class="tempo-container">
           <div id="indicador-cor" class="circulo-liturgico">
-            <span id="emoji-tempo">🎄</span>
+            <span id="emoji-tempo"></span>
           </div>
 
           <div class="tempo-info">
-            <p class="label-pequeno">Tempo Litúrgico</p>
-            <h2 id="nome-santo">Carregando...</h2>
-            <div class="cor-detalhe">
-              <span>Cor Liturgica:</span>
-              <span id="badge-cor" class="badge-cor">...</span>
-            </div>
-          </div>
-        </div>
+  <p class="label-pequeno">Tempo Litúrgico</p>
+  <h2 id="nome-santo">Carregando...</h2>
+  <div class="cor-detalhe">
+    <span id="badge-cor" class="badge-cor">...</span>
+  </div>
+</div>
         <a
           href="https://santo.cancaonova.com"
           target="_blank"
