--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
 
   </body>
 </html>
