dark mode e correcoes simples

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       href="./apple-touch-icon.png?v=1"
     />
     <link rel="manifest" href="./site.webmanifest?v=1" />
-
     <title>Liturgia | Ágape de Jovens</title>
 
     <link rel="stylesheet" href="css/style.css" />
@@ -52,12 +51,15 @@
     </div>
 
     <header class="topo" id="home">
-      <div class="header-container">
+    <div class="header-container">
         <img src="logo-agape.png" alt="Logo Ágape" class="logo-header" />
         <h1>Liturgia | Ágape de Jovens</h1>
-        <div style="width: 40px"></div>
-      </div>
-    </header>
+        
+        <button id="btn-tema" class="btn-icon" aria-label="Alternar Tema">
+            <span class="material-symbols-rounded">dark_mode</span>
+        </button>
+    </div>
+</header>
 
     <main>
       <div id="data-atual" class="data-atual">Carregando data...</div>
