--- a/index.html
+++ b/index.html
@@ -103,25 +103,27 @@
         </section>
       </div>
 
-      <div id="tab-biblia" class="conteudo-aba" style="display: none">
-        <section class="card">
-          <div style="text-align: center; margin-bottom: 20px">
-            <span class="material-symbols-rounded" style="font-size: 40px; color: var(--primary)">menu_book</span>
-            <h2>Bíblia Ave Maria</h2>
-            <p style="color: var(--muted); font-size: 0.8rem">Antigo e Novo Testamento</p>
-          </div>
-
-          <div class="botoes-horas" style="margin-bottom: 20px">
-            <button class="btn-hora" onclick="alternarTestamento('novo')" id="btn-novo-test">Novo</button>
-            <button class="btn-hora" onclick="alternarTestamento('antigo')" id="btn-antigo-test" style="opacity: 0.5">Antigo</button>
-          </div>
-
-          <div id="grid-livros" class="menu-grid" style="grid-template-columns: repeat(3, 1fr); gap: 8px">
+     <div id="tab-biblia" class="conteudo-aba" style="display: none;">
+        
+        <section class="card" style="margin-bottom: 5px !important; padding-bottom: 15px;">
+            <div style="text-align: center;">
+                <span class="material-symbols-rounded" style="font-size: 40px; color: var(--primary)">menu_book</span>
+                <h2>Bíblia Ave Maria</h2>
+                <p style="color: var(--muted); font-size: 0.8rem">Antigo e Novo Testamento</p>
             </div>
         </section>
-      </div>
 
-      <div id="tab-confissao" class="conteudo-aba" style="display: none">
+        <div class="botoes-horas" style="margin-bottom: 15px; margin-top: 10px;">
+            <button class="btn-hora" onclick="alternarTestamento('novo')" id="btn-novo-test">Novo</button>
+            <button class="btn-hora" onclick="alternarTestamento('antigo')" id="btn-antigo-test" style="opacity: 0.5">Antigo</button>
+        </div>
+
+        <div id="grid-livros" class="menu-grid" style="grid-template-columns: repeat(3, 1fr); gap: 8px; margin-top: 0 !important;">
+            </div>
+
+        <div style="height: 100px;"></div>
+    </div>
+    <div id="tab-confissao" class="conteudo-aba" style="display: none">
         
         <section class="card" style="text-align: center; background: linear-gradient(135deg, #581c87 0%, #9333ea 100%); color: white; padding: 25px 20px;">
           <span class="material-symbols-rounded" style="font-size: 48px; margin-bottom: 10px; opacity: 0.9;">healing</span>
@@ -170,78 +172,79 @@
           </div>
 
           <details class="exame-grupo roxo">
-  <summary>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <span class="material-symbols-rounded">church</span>
-      <span>Amar a Deus</span>
-    </div>
-  </summary>
-  <ul class="lista-exame">
-    <li><label><input type="checkbox" class="check-roxo"><span>Faltei à Missa aos domingos ou festas de preceito por culpa própria?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Cheguei tarde à Missa habitualmente por descaso?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Recebi a Eucaristia em estado de pecado grave (sem confessar antes)?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Omiti algum pecado grave em confissões passadas por vergonha?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Neguei minha fé ou tive vergonha de me posicionar como católico?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Usei o nome de Deus em vão, fiz juramentos falsos ou blasfemei?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Dediquei tempo diário à oração ou me esqueci de Deus na correria?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Acreditei em superstições, horóscopos, tarô ou práticas de ocultismo?</span></label></li>
-  </ul>
-</details>
+            <summary>
+                <div style="display:flex; align-items:center; gap:10px;">
+                <span class="material-symbols-rounded">church</span>
+                <span>Amar a Deus</span>
+                </div>
+            </summary>
+            <ul class="lista-exame">
+                <li><label><input type="checkbox" class="check-roxo"><span>Faltei à Missa aos domingos ou festas de preceito por culpa própria?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Cheguei tarde à Missa habitualmente por descaso?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Recebi a Eucaristia em estado de pecado grave (sem confessar antes)?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Omiti algum pecado grave em confissões passadas por vergonha?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Neguei minha fé ou tive vergonha de me posicionar como católico?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Usei o nome de Deus em vão, fiz juramentos falsos ou blasfemei?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Dediquei tempo diário à oração ou me esqueci de Deus na correria?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Acreditei em superstições, horóscopos, tarô ou práticas de ocultismo?</span></label></li>
+            </ul>
+          </details>
 
-<details class="exame-grupo roxo">
-  <summary>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <span class="material-symbols-rounded">groups</span>
-      <span>Amar ao próximo</span>
-    </div>
-  </summary>
-  <ul class="lista-exame">
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui desobediente, insolente ou falttei com o respeito aos meus pais?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Tratei mal meus irmãos, amigos ou colegas?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Guardei ódio, rancor ou desejei o mal a alguém?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui motivo de escândalo para outros por minhas atitudes ou palavras?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fiz fofocas, calúnias ou espalhei boatos (mesmo que fossem verdade)?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Menti para me beneficiar ou para prejudicar/enganar alguém?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui egoísta e neguei ajuda a quem realmente precisava?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Julguei os outros precipitadamente com malícia?</span></label></li>
-  </ul>
-</details>
+        <details class="exame-grupo roxo">
+            <summary>
+                <div style="display:flex; align-items:center; gap:10px;">
+                <span class="material-symbols-rounded">groups</span>
+                <span>Amar ao próximo</span>
+                </div>
+            </summary>
+            <ul class="lista-exame">
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui desobediente, insolente ou falttei com o respeito aos meus pais?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Tratei mal meus irmãos, amigos ou colegas?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Guardei ódio, rancor ou desejei o mal a alguém?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui motivo de escândalo para outros por minhas atitudes ou palavras?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fiz fofocas, calúnias ou espalhei boatos (mesmo que fossem verdade)?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Menti para me beneficiar ou para prejudicar/enganar alguém?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui egoísta e neguei ajuda a quem realmente precisava?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Julguei os outros precipitadamente com malícia?</span></label></li>
+            </ul>
+        </details>
 
-<details class="exame-grupo roxo">
-  <summary>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <span class="material-symbols-rounded">favorite</span>
-      <span>Pureza e Temperança</span>
-    </div>
-  </summary>
-  <ul class="lista-exame">
-    <li><label><input type="checkbox" class="check-roxo"><span>Consenti em pensamentos ou desejos impuros deliberadamente?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Assisti pornografia ou busquei conteúdos sensuais/eróticos na internet?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Cometi atos de impureza comigo mesmo (masturbação)?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Tive relações sexuais fora ou antes do matrimônio?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>No namoro, faltei com o respeito ou levei o outro a pecar?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Vesti-me de forma vulgar ou usei minha imagem para provocar desejo alheio?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui guloso, bebi demais ou usei drogas?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui vaidoso, soberbo ou me senti superior aos outros?</span></label></li>
-  </ul>
-</details>
+        <details class="exame-grupo roxo">
+            <summary>
+                <div style="display:flex; align-items:center; gap:10px;">
+                <span class="material-symbols-rounded">favorite</span>
+                <span>Pureza e Temperança</span>
+                </div>
+            </summary>
+            <ul class="lista-exame">
+                <li><label><input type="checkbox" class="check-roxo"><span>Consenti em pensamentos ou desejos impuros deliberadamente?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Assisti pornografia ou busquei conteúdos sensuais/eróticos na internet?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Cometi atos de impureza comigo mesmo (masturbação)?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Tive relações sexuais fora ou antes do matrimônio?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>No namoro, faltei com o respeito ou levei o outro a pecar?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Vesti-me de forma vulgar ou usei minha imagem para provocar desejo alheio?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui guloso, bebi demais ou usei drogas?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui vaidoso, soberbo ou me senti superior aos outros?</span></label></li>
+            </ul>
+        </details>
 
-<details class="exame-grupo roxo">
-  <summary>
-    <div style="display:flex; align-items:center; gap:10px;">
-      <span class="material-symbols-rounded">work</span>
-      <span>Deveres e Honestidade</span>
-    </div>
-  </summary>
-  <ul class="lista-exame">
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui preguiçoso nos estudos ou no trabalho?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Colei em provas ou apresentei trabalhos que não eram meus?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Peguei dinheiro ou objetos que não me pertenciam sem permissão?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Desperdicei dinheiro com coisas fúteis enquanto outros passam necessidade?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Perdi tempo excessivo em redes sociais e jogos, negligenciando meus deveres?</span></label></li>
-    <li><label><input type="checkbox" class="check-roxo"><span>Fui invejoso em relação ao sucesso ou bens dos outros?</span></label></li>
-  </ul>
-</details>
+        <details class="exame-grupo roxo">
+            <summary>
+                <div style="display:flex; align-items:center; gap:10px;">
+                <span class="material-symbols-rounded">work</span>
+                <span>Deveres e Honestidade</span>
+                </div>
+            </summary>
+            <ul class="lista-exame">
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui preguiçoso nos estudos ou no trabalho?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Colei em provas ou apresentei trabalhos que não eram meus?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Peguei dinheiro ou objetos que não me pertenciam sem permissão?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Desperdicei dinheiro com coisas fúteis enquanto outros passam necessidade?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Perdi tempo excessivo em redes sociais e jogos, negligenciando meus deveres?</span></label></li>
+                <li><label><input type="checkbox" class="check-roxo"><span>Fui invejoso em relação ao sucesso ou bens dos outros?</span></label></li>
+            </ul>
+        </details>
+
         </section>
 
         <section class="card card-oracao">
@@ -369,6 +372,16 @@
     <div id="modalSobreSite" class="modal"><div class="modal-content"><div class="modal-header"><h3>Sobre</h3><button class="close-modal">&times;</button></div><div class="modal-body"><p>Ágape de Jovens v5.0</p><button id="btn-login-secreto" class="btn-secondary" style="margin-top:20px;">Admin</button></div></div></div>
     <div id="modalLogin" class="modal"><div class="modal-content modal-content-centered"><div class="modal-header"><h3>Admin</h3><button class="close-modal">&times;</button></div><div class="modal-body"><input type="email" id="login-email" class="input-admin" placeholder="Email"><input type="password" id="login-senha" class="input-admin" placeholder="Senha"><button id="btn-fazer-login" class="btn-primary">Entrar</button></div></div></div>
     <div id="modalAdminAvisos" class="modal"><div class="modal-content"><div class="modal-header"><h3>Avisos</h3><button class="close-modal">&times;</button></div><div class="modal-body"><textarea id="novo-aviso-texto" class="input-admin"></textarea><input type="date" id="aviso-data-expiracao" class="input-admin"><button id="btn-salvar-aviso" class="btn-primary">Salvar</button><div id="meus-avisos-lista"></div></div></div></div>
+
+    <div id="leitura-biblia-container" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:#0f172a; z-index:10000; overflow-y:auto; padding:20px;">
+        <div style="max-width:650px; margin:0 auto; padding-bottom:50px;">
+            <button onclick="fecharLeitura()" style="background:rgba(255,255,255,0.1); color:white; border:none; padding:10px 15px; border-radius:10px; cursor:pointer;">
+            ← Voltar
+            </button>
+            <h2 id="leitura-titulo" style="color:#3b82f6; margin:20px 0;"></h2>
+            <div id="leitura-texto" style="line-height:1.8; color:#cbd5e1; text-align: justify;"></div>
+        </div>
+    </div>
 
     <script type="module" src="./js/main.js"></script>
   </body>
