--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png?v=1" />
     <link rel="manifest" href="./site.webmanifest?v=1" />
     
-    <title>Liturgia | Ágape de Jovens</title>
+    <title>Liturgia | Ágape de Jovens.</title>
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
