fix(ui): alinhamento vertical e espaçamento na barra de navegação
- Implementação de Flexbox com 'gap' fixo para unificar o espaçamento entre ícone e texto.
- Normalização de ícones de fonte (Material Symbols) e SVGs para o mesmo modelo de caixa (24px).
- Remoção de margens e line-heights residuais que causavam desnível nos textos.

--- a/index.html
+++ b/index.html
@@ -306,10 +306,25 @@
         <span class="material-symbols-rounded">church</span>
         <span>Início</span>
       </a>
-      <a href="#" class="nav-item" data-target="tab-oracoes">
-        <span class="material-symbols-rounded">auto_awesome</span>
-        <span>Orações</span>
-      </a>
+        <a href="#" class="nav-item" data-target="tab-oracao">
+    <svg class="icone-oracao-custom" viewBox="0 0 682.67 682.67" xmlns="http://www.w3.org/2000/svg">
+        <g transform="matrix(1.33,0,0,-1.33,0,682.67)">
+            <g>
+                <path d="m 0,0 v 120 h -40 v 40 H 0 v 60 H 40 V 160 H 80 V 120 H 40 V 0 Z" transform="translate(58,282)" />
+                <path d="m 0,0 -90.48,60.31 -56.19,-75.87 90,-60 86.65,115.54 c 2.19,2.92 3.54,6.38 3.9,10.01 l 16.17,161.63 c 0.21,2.05 0.2,4.07 0,6.03 -1.31,12.85 -10.87,23.48 -23.5,26.15 -2,0.42 -4.08,0.64 -6.21,0.64 -15.33,0 -28.17,-11.62 -29.7,-26.88 l -9.31,-93.12" transform="translate(247.67,85.56)" />
+                <path d="M 0,0 -24.93,16.62" transform="translate(155.68,93.55)" />
+                <path d="m 0,0 22.27,105.65 c 4.3,23.68 9.62,48.22 15.91,72.91" transform="translate(157.19,145.87)" />
+                <path d="m 0,0 c 10.66,31.02 22.89,61.05 36.67,88.61 3.77,7.53 11.47,12.29 19.9,12.29 12.48,0 22.24,-10.17 22.24,-22.2 0,-1.21 -0.1,-2.45 -0.31,-3.7 L 56.01,-71.93" transform="translate(218.18,401.1)" />
+                <path d="m 0,0 90.47,60.31 56.19,-75.87 -90,-60 -86.65,115.54 c -2.19,2.92 -3.54,6.38 -3.9,10.01 l -16.16,161.63 c -0.21,2.05 -0.2,4.07 0,6.03 1.31,12.85 10.86,23.48 23.49,26.15 2,0.42 4.08,0.64 6.21,0.64 15.34,0 28.18,-11.62 29.7,-26.88 L 18.66,124.44" transform="translate(347.77,85.56)" />
+                <path d="m 0,0 24.55,16.37 h 0.01" transform="translate(440.13,93.8)" />
+                <path d="m 0,0 -22.26,105.65 c -14.29,78.59 -39.68,166.74 -75.4,238.19 -3.77,7.53 -11.47,12.29 -19.89,12.29 -12.48,0 -22.25,-10.17 -22.25,-22.2 0,-1.22 0.1,-2.45 0.31,-3.7 L -117,183.3" transform="translate(438.24,145.87)" />
+                
+                <path  d="m 0,0 c 5.52,0 10,-4.48 10,-10 0,-5.52 -4.48,-10 -10,-10 -5.52,0 -10,4.48 -10,10 0,5.52 4.48,10 10,10" transform="translate(206,373)" />
+            </g>
+        </g>
+    </svg>
+    <span>Oração</span>
+</a>
       <a href="#" class="nav-item" data-target="tab-biblia">
         <span class="material-symbols-rounded">auto_stories</span>
         <span>Bíblia</span>
