feat(novenas): implementação do sistema de novenas, persistência de progresso e novo card UI
- Criação do arquivo 'js/novenas.json' contendo a estrutura do calendário anual e o conteúdo integral da Novena a São Francisco de Sales (créditos: Minha Biblioteca Católica).
- Implementação de lógica assíncrona em 'main.js' para carregar novenas, renderizar lista por mês e gerenciar a navegação entre os dias.
- Adição de persistência de dados via localStorage para salvar o progresso (dias rezados/concluídos).
- Atualização da interface de leitura (modal) para exibir estruturalmente: Oração Inicial, Meditação do Dia e Oração Final.
- Substituição do botão de acesso na Home por um componente 'card' estilizado, melhorando a hierarquia visual e integração com o layout existente.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
             Verificando o dia da semana...
         </div>
     </div>
+    <div class="card" onclick="abrirListaNovenas()" style="cursor: pointer; display: flex; align-items: center; justify-content: space-between; gap: 15px; margin-top: 20px;">
+    
+    <div style="display: flex; align-items: center; gap: 15px;">
+        <div style="background: var(--bg); padding: 10px; border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+            <span class="material-symbols-rounded" style="color: var(--primary); font-size: 24px;">calendar_month</span>
+        </div>
+        
+        <div style="text-align: left;">
+            <h3 style="margin: 0; font-size: 1rem; color: var(--text); font-weight: bold;">Novenas e Devoções</h3>
+            <p style="margin: 0; font-size: 0.8rem; color: var(--muted);">Calendário litúrgico e orações</p>
+        </div>
+    </div>
+
+</div>
 
     <div class="card" id="horas">
         <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-bottom: 15px; width: 100%;">
